Abgabe/V2.0/crosscompiler_pythontocpp/pyParser.py
# Generated from java-escape by ANTLR 4.4
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .pyListener import pyListener
else:
    from pyListener import pyListener

class pyParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    EOF = Token.EOF
    T__88=1
    T__87=2
    T__86=3
    T__85=4
    T__84=5
    T__83=6
    T__82=7
    T__81=8
    T__80=9
    T__79=10
    T__78=11
    T__77=12
    T__76=13
    T__75=14
    T__74=15
    T__73=16
    T__72=17
    T__71=18
    T__70=19
    T__69=20
    T__68=21
    T__67=22
    T__66=23
    T__65=24
    T__64=25
    T__63=26
    T__62=27
    T__61=28
    T__60=29
    T__59=30
    T__58=31
    T__57=32
    T__56=33
    T__55=34
    T__54=35
    T__53=36
    T__52=37
    T__51=38
    T__50=39
    T__49=40
    T__48=41
    T__47=42
    T__46=43
    T__45=44
    T__44=45
    T__43=46
    T__42=47
    T__41=48
    T__40=49
    T__39=50
    T__38=51
    T__37=52
    T__36=53
    T__35=54
    T__34=55
    T__33=56
    T__32=57
    T__31=58
    T__30=59
    T__29=60
    T__28=61
    T__27=62
    T__26=63
    T__25=64
    T__24=65
    T__23=66
    T__22=67
    T__21=68
    T__20=69
    T__19=70
    T__18=71
    T__17=72
    T__16=73
    T__15=74
    T__14=75
    T__13=76
    T__12=77
    T__11=78
    T__10=79
    T__9=80
    T__8=81
    T__7=82
    T__6=83
    T__5=84
    T__4=85
    T__3=86
    T__2=87
    T__1=88
    T__0=89
    BlockBegin=90
    BlockEnd=91
    Keyword=92
    Operator=93
    Var=94
    Int=95
    Float=96
    Comment=97
    Space=98
    Str=99

    tokenNames = [ u"<INVALID>", u"'R'", u"'+='", u"'%='", u"'finally'", 
                   u"'del'", u"'!='", u"'{'", u"'while'", u"'**'", u"'^='", 
                   u"'>>'", u"'='", u"'^'", u"'<<='", u"'for'", u"'b'", 
                   u"'|='", u"'('", u"'bR'", u"'-='", u"','", u"'/='", u"'r'", 
                   u"'U'", u"'global'", u"'>='", u"'<'", u"'//'", u"']'", 
                   u"'assert'", u"'uR'", u"'~'", u"'@'", u"'<>'", u"'**='", 
                   u"'br'", u"'+'", u"'BR'", u"'/'", u"'*='", u"'def'", 
                   u"'as'", u"'continue'", u"'&='", u"'exec'", u"'u'", u"'return'", 
                   u"'class'", u"'>>='", u"';'", u"'<<'", u"'}'", u"'UR'", 
                   u"'ur'", u"'if'", u"'try'", u"'<='", u"'except'", u"'break'", 
                   u"'//='", u"'from'", u"'&'", u"'print'", u"'is'", u"'yield'", 
                   u"'*'", u"'Br'", u"'.'", u"'lambda'", u"':'", u"'['", 
                   u"'=='", u"'|'", u"'elif'", u"'with'", u"'Ur'", u"'>'", 
                   u"'or'", u"'B'", u"'pass'", u"'%'", u"'else'", u"'in'", 
                   u"')'", u"'and'", u"'not'", u"'-'", u"'import'", u"'raise'", 
                   u"':$blockbegin'", u"'$blockend'", u"Keyword", u"Operator", 
                   u"Var", u"Int", u"Float", u"Comment", u"Space", u"Str" ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_single_stmt = 2
    RULE_stmts = 3
    RULE_import_ = 4
    RULE_id_list = 5
    RULE_id_alias = 6
    RULE_mod_list = 7
    RULE_mod_alias = 8
    RULE_module = 9
    RULE_rel_module = 10
    RULE_block_stmt = 11
    RULE_block_head = 12
    RULE_decorator = 13
    RULE_loop = 14
    RULE_while_ = 15
    RULE_for_ = 16
    RULE_with_ = 17
    RULE_alias_list = 18
    RULE_alias = 19
    RULE_ifelse = 20
    RULE_if_ = 21
    RULE_elif_ = 22
    RULE_else_ = 23
    RULE_block = 24
    RULE_class_ = 25
    RULE_trycatch = 26
    RULE_except_ = 27
    RULE_assign = 28
    RULE_assign_stmt = 29
    RULE_aug_assign = 30
    RULE_aug_op = 31
    RULE_varlist = 32
    RULE_vartuple = 33
    RULE_exprlist = 34
    RULE_expr = 35
    RULE_lambda_ = 36
    RULE_generator = 37
    RULE_list_gen = 38
    RULE_iter_gen = 39
    RULE_set_gen = 40
    RULE_dict_gen = 41
    RULE_gen_expr = 42
    RULE_val = 43
    RULE_op_cmp = 44
    RULE_slice_ = 45
    RULE_list_ = 46
    RULE_tuple_ = 47
    RULE_set_ = 48
    RULE_dict_ = 49
    RULE_dictlist = 50
    RULE_dictitem = 51
    RULE_func = 52
    RULE_paramlist = 53
    RULE_pos_paramlist = 54
    RULE_pos_paramtuple = 55
    RULE_kparamlist = 56
    RULE_kparam = 57
    RULE_arglist = 58
    RULE_pos_arglist = 59
    RULE_pos_arg = 60
    RULE_karglist = 61
    RULE_karg = 62
    RULE_var = 63
    RULE_simple_var = 64
    RULE_id_ = 65
    RULE_number = 66
    RULE_int_ = 67
    RULE_float_ = 68
    RULE_string = 69
    RULE_str_prefix = 70
    RULE_str_val = 71
    RULE_blockbegin = 72
    RULE_blockend = 73

    ruleNames =  [ u"prog", u"stmt", u"single_stmt", u"stmts", u"import_", 
                   u"id_list", u"id_alias", u"mod_list", u"mod_alias", u"module", 
                   u"rel_module", u"block_stmt", u"block_head", u"decorator", 
                   u"loop", u"while_", u"for_", u"with_", u"alias_list", 
                   u"alias", u"ifelse", u"if_", u"elif_", u"else_", u"block", 
                   u"class_", u"trycatch", u"except_", u"assign", u"assign_stmt", 
                   u"aug_assign", u"aug_op", u"varlist", u"vartuple", u"exprlist", 
                   u"expr", u"lambda_", u"generator", u"list_gen", u"iter_gen", 
                   u"set_gen", u"dict_gen", u"gen_expr", u"val", u"op_cmp", 
                   u"slice_", u"list_", u"tuple_", u"set_", u"dict_", u"dictlist", 
                   u"dictitem", u"func", u"paramlist", u"pos_paramlist", 
                   u"pos_paramtuple", u"kparamlist", u"kparam", u"arglist", 
                   u"pos_arglist", u"pos_arg", u"karglist", u"karg", u"var", 
                   u"simple_var", u"id_", u"number", u"int_", u"float_", 
                   u"string", u"str_prefix", u"str_val", u"blockbegin", 
                   u"blockend" ]

    def __init__(self, input):
        super(pyParser, self).__init__(input)
        self.checkVersion("4.4")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(pyParser.ProgContext, self).__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(pyParser.StmtContext)
            else:
                return self.getTypedRuleContext(pyParser.StmtContext,i)


        def getRuleIndex(self):
            return pyParser.RULE_prog

        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterProg(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitProg(self)




    def prog(self):

        localctx = pyParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 148 
                self.stmt()
                self.state = 151 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.T__88) | (1 << self.T__84) | (1 << self.T__82) | (1 << self.T__81) | (1 << self.T__74) | (1 << self.T__73) | (1 << self.T__71) | (1 << self.T__70) | (1 << self.T__66) | (1 << self.T__65) | (1 << self.T__64) | (1 << self.T__59) | (1 << self.T__58) | (1 << self.T__57) | (1 << self.T__56) | (1 << self.T__53) | (1 << self.T__52) | (1 << self.T__51) | (1 << self.T__48) | (1 << self.T__46) | (1 << self.T__44) | (1 << self.T__43) | (1 << self.T__42) | (1 << self.T__41) | (1 << self.T__36) | (1 << self.T__35) | (1 << self.T__34) | (1 << self.T__33) | (1 << self.T__30) | (1 << self.T__28) | (1 << self.T__26))) != 0) or ((((_la - 65)) & ~0x3f) == 0 and ((1 << (_la - 65)) & ((1 << (self.T__24 - 65)) | (1 << (self.T__22 - 65)) | (1 << (self.T__20 - 65)) | (1 << (self.T__18 - 65)) | (1 << (self.T__14 - 65)) | (1 << (self.T__13 - 65)) | (1 << (self.T__10 - 65)) | (1 << (self.T__9 - 65)) | (1 << (self.T__3 - 65)) | (1 << (self.T__2 - 65)) | (1 << (self.T__1 - 65)) | (1 << (self.T__0 - 65)) | (1 << (self.Var - 65)) | (1 << (self.Int - 65)) | (1 << (self.Float - 65)) | (1 << (self.Str - 65)))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(pyParser.StmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def single_stmt(self):
            return self.getTypedRuleContext(pyParser.Single_stmtContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(pyParser.Block_stmtContext,0)


        def getRuleIndex(self):
            return pyParser.RULE_stmt

        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterStmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = pyParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 155
            token = self._input.LA(1)
            if token in [self.T__88, self.T__84, self.T__82, self.T__73, self.T__71, self.T__70, self.T__66, self.T__65, self.T__64, self.T__59, self.T__58, self.T__57, self.T__53, self.T__52, self.T__51, self.T__46, self.T__44, self.T__43, self.T__42, self.T__36, self.T__35, self.T__30, self.T__28, self.T__26, self.T__24, self.T__22, self.T__20, self.T__18, self.T__13, self.T__10, self.T__9, self.T__3, self.T__2, self.T__1, self.T__0, self.Var, self.Int, self.Float, self.Str]:
                self.enterOuterAlt(localctx, 1)
                self.state = 153 
                self.single_stmt()

            elif token in [self.T__81, self.T__74, self.T__56, self.T__48, self.T__41, self.T__34, self.T__33, self.T__14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 154 
                self.block_stmt()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Single_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(pyParser.Single_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def assign_stmt(self):
            return self.getTypedRuleContext(pyParser.Assign_stmtContext,0)


        def exprlist(self):
            return self.getTypedRuleContext(pyParser.ExprlistContext,0)


        def stmts(self):
            return self.getTypedRuleContext(pyParser.StmtsContext,0)


        def getRuleIndex(self):
            return pyParser.RULE_single_stmt

        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterSingle_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitSingle_stmt(self)




    def single_stmt(self):

        localctx = pyParser.Single_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_single_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 157 
                self.assign_stmt()
                pass

            elif la_ == 2:
                self.state = 158 
                self.exprlist()
                pass

            elif la_ == 3:
                self.state = 159 
                self.stmts()
                pass


            self.state = 162
            self.match(self.T__39)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(pyParser.StmtsContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pyParser.RULE_stmts

     
        def copyFrom(self, ctx):
            super(pyParser.StmtsContext, self).copyFrom(ctx)



    class Assert_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Assert_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(pyParser.ExprContext)
            else:
                return self.getTypedRuleContext(pyParser.ExprContext,i)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterAssert_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitAssert_stmt(self)


    class Global_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Global_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)

        def var(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(pyParser.VarContext)
            else:
                return self.getTypedRuleContext(pyParser.VarContext,i)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterGlobal_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitGlobal_stmt(self)


    class Exec_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Exec_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(pyParser.ExprContext)
            else:
                return self.getTypedRuleContext(pyParser.ExprContext,i)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterExec_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitExec_stmt(self)


    class Loop_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Loop_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterLoop_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitLoop_stmt(self)


    class Func_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Func_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)

        def exprlist(self):
            return self.getTypedRuleContext(pyParser.ExprlistContext,0)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterFunc_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitFunc_stmt(self)


    class Pass_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Pass_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterPass_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitPass_stmt(self)


    class Del_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Del_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)

        def varlist(self):
            return self.getTypedRuleContext(pyParser.VarlistContext,0)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterDel_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitDel_stmt(self)


    class Print_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Print_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)

        def exprlist(self):
            return self.getTypedRuleContext(pyParser.ExprlistContext,0)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterPrint_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitPrint_stmt(self)


    class Import_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Import_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)

        def import_(self):
            return self.getTypedRuleContext(pyParser.Import_Context,0)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterImport_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitImport_stmt(self)


    class Raise_stmtContext(StmtsContext):

        def __init__(self, parser, ctx): # actually a pyParser.StmtsContext)
            super(pyParser.Raise_stmtContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(pyParser.ExprContext)
            else:
                return self.getTypedRuleContext(pyParser.ExprContext,i)


        def enterRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.enterRaise_stmt(self)

        def exitRule(self, listener):
            if isinstance( listener, pyListener ):
                listener.exitRaise_stmt(self)



    def stmts(self):

        localctx = pyParser.StmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stmts)
        self._la = 0 # Token type
        try:
            self.state = 223
            token = self._input.LA(1)
            if token in [self.T__9]:
                localctx = pyParser.Pass_stmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.match(self.T__9)

            elif token in [self.T__84]:
                localctx = pyParser.Del_stmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.match(self.T__84)
                self.state = 166 
                self.varlist()

            elif token in [self.T__26]:
                localctx = pyParser.Print_stmtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 167
                self.match(self.T__26)
                self.state = 173
                token = self._input.LA(1)
                if token in [self.T__88, self.T__82, self.T__73, self.T__71, self.T__70, self.T__66, self.T__65, self.T__58, self.T__57, self.T__53, self.T__52, self.T__51, self.T__43, self.T__39, self.T__36, self.T__35, self.T__22, self.T__20, self.T__18, self.T__13, self.T__10, self.T__3, self.T__2, self.Var, self.Int, self.Float, self.Str]:
                    self.state = 169
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.T__88) | (1 << self.T__82) | (1 << self.T__73) | (1 << self.T__71) | (1 << self.T__70) | (1 << self.T__66) | (1 << self.T__65) | (1 << self.T__58) | (1 << self.T__57) | (1 << self.T__53) | (1 << self.T__52) | (1 << self.T__51) | (1 << self.T__43) | (1 << self.T__36) | (1 << self.T__35))) != 0) or ((((_la - 67)) & ~0x3f) == 0 and ((1 << (_la - 67)) & ((1 << (self.T__22 - 67)) | (1 << (self.T__20 - 67)) | (1 << (self.T__18 - 67)) | (1 << (self.T__13 - 67)) | (1 << (self.T__10 - 67)) | (1 << (self.T__3 - 67)) | (1 << (self.T__2 - 67)) | (1 << (self.Var - 67)) | (1 << (self.Int - 67)) | (1 << (self.Float - 67)) | (1 << (self.Str - 67)))) != 0):
                        self.state = 168 
                        self.exprlist()



                elif token in [self.T__78]:
                    self.state = 171
                    self.match(self.T__78)
                    self.state = 172 
                    self.exprlist()

                else:
                    raise NoViableAltException(self)


            elif token in [self.T__59]:
                localctx = pyParser.Assert_stmtContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 175
                self.match(self.T__59)
                self.state = 176 
                self.expr(0)
                self.state = 179
                _la = self._input.LA(1)
                if _la==pyParser.T__68:
                    self.state = 177
                    self.match(self.T__68)
                    self.state = 178 
                    self.expr(0)



            elif token in [self.T__0]:
                localctx = pyParser.Raise_stmtContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 181
                self.match(self.T__0)
                self.state = 191
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.T__88) | (1 << self.T__82) | (1 << self.T__73) | (1 << self.T__71) | (1 << self.T__70) | (1 << self.T__66) | (1 << self.T__65) | (1 << self.T__58) | (1 << self.T__57) | (1 << self.T__53) | (1 << self.T__52) | (1 << self.T__51) | (1 << self.T__43) | (1 << self.T__36) | (1 << self.T__35))) != 0) or ((((_la - 67)) & ~0x3f) == 0 and ((1 << (_la - 67)) & ((1 << (self.T__22 - 67)) | (1 << (self.T__20 - 67)) | (1 << (self.T__18 - 67)) | (1 << (self.T__13 - 67)) | (1 << (self.T__10 - 67)) | (1 << (self.T__3 - 67)) | (1 << (self.T__2 - 67)) | (1 << (self.Var - 67)) | (1 << (self.Int - 67)) | (1 << (self.Float - 67)) | (1 << (self.Str - 67)))) != 0):
                    self.state = 182 
                    self.expr(0)
                    self.state = 185
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        self.state = 183
                        self.match(self.T__68)
                        self.state = 184 
                        self.expr(0)


                    self.state = 189
                    _la = self._input.LA(1)
                    if _la==pyParser.T__68:
                        self.state = 187
                        self.match(self.T__68)
                        self.state = 188 
                        self.expr(0)





            elif token in [self.T__30]:
                localctx = pyParser.Loop_stmtContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 193
                self.match(self.T__30)

            elif token in [self.T__46]:
                localctx = pyParser.Loop_stmtContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 194
                self.match(self.T__46)
